--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -39,7 +39,7 @@
     <string name="text_invalid_api_key">Ungültiger API-Schlüssel</string>
     <string name="text_invalid_subscription">PureWeather erfordert das „OneCall“ Abonnement</string>
     <string name="text_required">Benötigt</string>
-    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Datenschutzrichtlinie</a></string>
+    <string name="text_privacy_policy"><a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Datenschutzrichtlinie</a></string>
     <string name="text_accept">Annehmen</string>
     <string name="text_decline">Ablehnen</string>
     <string name="text_unknown">Unbekannt</string>
@@ -51,11 +51,11 @@
     <string name="text_error_new_version">Fehler bei der Suche nach Aktualisierungen</string>
     <string name="text_error_getting_release">Fehler beim Finden einer Veröffentlichung</string>
     <string name="onboarding_welcome_text_title">Willkommen</string>
-    <string name="onboarding_welcome_text_paragraph">Danke für das Installieren meiner App! PureWeather ist KOSTENLOS, Open Source und nur auf <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a> und meinem <a href="https://github.com/TylerWilliamson/PureWeather/releases">GitHub</a> verfübar. Wenn du die App aus einer anderen Quelle installiert hast, dann deinstalliere sie und lade sie aus dem Play Store, von F-Droid, oder von GitHub herunter.</string>
+    <string name="onboarding_welcome_text_paragraph">Danke für das Installieren meiner App! PureWeather ist KOSTENLOS, Open Source und nur auf <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a> und meinem <a href="https://github.com/cworld0/PureWeather/releases">GitHub</a> verfübar. Wenn du die App aus einer anderen Quelle installiert hast, dann deinstalliere sie und lade sie aus dem Play Store, von F-Droid, oder von GitHub herunter.</string>
     <string name="onboarding_welcome_text_thanks">Besonderen Dank</string>
     <string name="onboarding_welcome_text_thanks_paragraph">PureWeather funktioniert nur auf Grund von:\n• <a href="https://openweathermap.org/">OpenWeatherMap</a> und <a href="https://open-meteo.com/">Open-Meteo</a> \n• <a href="https://github.com/amitjakhu/dripicons-weather">Dripicons - Weather</a> von Amit Jakhu  \n• <a href="https://www.rainviewer.com/">RainViewer</a>  \n• <a href="https://github.com/woxblom/DragListView">ListDragView</a> (<a href="https://github.com/woxblom/DragListView/blob/master/LICENSE">Lizens</a>) von Magnus Woxblom</string>
     <string name="onboarding_welcome_text_policies">Richtlinien</string>
-    <string name="onboarding_welcome_text_policies_paragraph">• PureWeather ist freie Software lizensiert unter der <a href="https://www.gnu.org/licenses/">GNU General Public License</a>\n • Besuche die <a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Datenschutzrichtlinie</a></string>
+    <string name="onboarding_welcome_text_policies_paragraph">• PureWeather ist freie Software lizensiert unter der <a href="https://www.gnu.org/licenses/">GNU General Public License</a>\n • Besuche die <a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Datenschutzrichtlinie</a></string>
     <string name="onboarding_location_text_title">Orte</string>
     <string name="onboarding_location_button_other_location">Anderen Ort</string>
     <string name="onboarding_location_button_current_location">Dieser Standort</string>
