--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -29,7 +29,7 @@
     <string name="onboarding_units_button_fahrenheit">Fahrenheit (°F)</string>
     <string name="onboarding_location_button_clear_desc">Limpiar</string>
     <string name="onboarding_notif_text_title">Notificaciones</string>
-    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Política de Privacidad</a></string>
+    <string name="text_privacy_policy"><a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Política de Privacidad</a></string>
     <string name="text_invalid_api_key">Llave API inválida</string>
     <string name="onboarding_location_text_title">Ubicaciones</string>
     <string name="icon_weather_desc">Clima Actual</string>
@@ -45,7 +45,7 @@
     <string name="onboarding_welcome_text_thanks">Agradecimientos Especiales</string>
     <string name="text_no_location">Ninguna ubicación elegida</string>
     <string name="onboarding_welcome_text_policies_paragraph">• PureWeather es software libre bajo la licencia <a href="https://www.gnu.org/licenses/">Licencia Pública General de GNU</a>
-\n • Comprueba aquí la <a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Política de Privacidad</a></string>
+\n • Comprueba aquí la <a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Política de Privacidad</a></string>
     <string name="format_feelslike">Se siente como %s</string>
     <string name="text_invalid_api_key_or_instance">Llave API o Instancia inválida</string>
     <string name="onboarding_location_button_current_location">Esta Ubicación</string>
@@ -55,7 +55,7 @@
     <string name="text_settings">Configuración</string>
     <string name="text_locations">Ubicaciones</string>
     <string name="onboarding_button_disabled">Deshabilitado</string>
-    <string name="onboarding_welcome_text_paragraph">¡Gracias por instalar mi aplicación! PureWeather es software libre y de código abierto y sólo está disponible en <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, y mi <a href="https://github.com/TylerWilliamson/PureWeather/releases">GitHub</a>. Si instalaste esta aplicación desde otro origen, por favor desinstálala e instálala desde Play Store, F-Droid, o GitHub.</string>
+    <string name="onboarding_welcome_text_paragraph">¡Gracias por instalar mi aplicación! PureWeather es software libre y de código abierto y sólo está disponible en <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, y mi <a href="https://github.com/cworld0/PureWeather/releases">GitHub</a>. Si instalaste esta aplicación desde otro origen, por favor desinstálala e instálala desde Play Store, F-Droid, o GitHub.</string>
     <string name="onboarding_ui_button_light">Claro</string>
     <string name="dialog_edit_location_title">Editar la Ubicación</string>
     <string name="format_visibility">%.1f km Visibilidad</string>
