--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -44,7 +44,7 @@
     <string name="onboarding_welcome_text_thanks">Remerciements</string>
     <string name="onboarding_welcome_text_policies">Politiques</string>
     <string name="onboarding_welcome_text_policies_paragraph">• PureWeather est un logiciel libre sous la licence <a href="https://www.gnu.org/licenses/">GNU General Public License</a>
-\n • Vérifier <a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">la politique de confidentialité</a></string>
+\n • Vérifier <a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">la politique de confidentialité</a></string>
     <string name="onboarding_location_text_title">Emplacements</string>
     <string name="onboarding_location_button_other_location">Autre emplacement</string>
     <string name="onboarding_location_button_current_location">Ma position</string>
@@ -111,11 +111,11 @@
     <string name="text_current_location">Mon emplacement</string>
     <string name="text_locations">Emplacements</string>
     <string name="text_no_location">Aucun emplacement choisi</string>
-    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Politique de confidentialité</a></string>
+    <string name="text_privacy_policy"><a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Politique de confidentialité</a></string>
     <string name="text_decline">Refuser</string>
     <string name="text_open">Ouvrir</string>
     <string name="text_whats_new">Quoi de neuf \?</string>
-    <string name="onboarding_welcome_text_paragraph">Merci d\'avoir installé mon application ! PureWeather est libre et open source et disponible uniquement sur <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, et mon<a href="https://github.com/TylerWilliamson/PureWeather/releases">GitHub</a>. Si votre application provient d\'ailleurs, merci de la désinstaller et d\'installer la version du Play Store, de F-Droid, ou de GitHub.</string>
+    <string name="onboarding_welcome_text_paragraph">Merci d\'avoir installé mon application ! PureWeather est libre et open source et disponible uniquement sur <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, et mon<a href="https://github.com/cworld0/PureWeather/releases">GitHub</a>. Si votre application provient d\'ailleurs, merci de la désinstaller et d\'installer la version du Play Store, de F-Droid, ou de GitHub.</string>
     <string name="text_new_version_available">Nouvelle version disponible !</string>
     <string name="onboarding_welcome_text_thanks_paragraph">PureWeather est rendu possible grâce à :
 \n • <a href="https://openweathermap.org/">OpenWeatherMap</a> et <a href="https://open-meteo.com/">Open-Meteo</a>
