--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="text_invalid_api_key_or_instance">Invalid API Key or Instance</string>
     <string name="text_invalid_subscription">PureWeather requires the \"OneCall\" subscription</string>
     <string name="text_required">Required</string>
-    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Privacy Policy</a></string>
+    <string name="text_privacy_policy"><a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Privacy Policy</a></string>
     <string name="text_accept">Accept</string>
     <string name="text_decline">Decline</string>
     <string name="text_unknown">Unknown</string>
@@ -70,11 +70,11 @@
     <string name="text_openmeteo" translatable="false">Open-Meteo</string>
 
     <string name="onboarding_welcome_text_title">Welcome</string>
-    <string name="onboarding_welcome_text_paragraph">Thanks for installing my app! PureWeather is FREE and Open Source and only available on <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, and my <a href="https://github.com/TylerWilliamson/PureWeather/releases">GitHub</a>. If you installed this app from another source, please uninstall it and install the Play Store, F-Droid, or GitHub version.</string>
+    <string name="onboarding_welcome_text_paragraph">Thanks for installing my app! PureWeather is FREE and Open Source and only available on <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a>, and my <a href="https://github.com/cworld0/PureWeather/releases">GitHub</a>. If you installed this app from another source, please uninstall it and install the Play Store, F-Droid, or GitHub version.</string>
     <string name="onboarding_welcome_text_thanks">Special Thanks</string>
     <string name="onboarding_welcome_text_thanks_paragraph">PureWeather is made possible by:\n • <a href="https://openweathermap.org/">OpenWeatherMap</a> and <a href="https://open-meteo.com/">Open-Meteo</a>\n • <a href="https://github.com/amitjakhu/dripicons-weather">Dripicons - Weather</a> by Amit Jakhu\n • <a href="https://www.rainviewer.com/">RainViewer</a>\n • <a href="https://github.com/woxblom/DragListView">ListDragView</a> (<a href="https://github.com/woxblom/DragListView/blob/master/LICENSE">license</a>) by Magnus Woxblom</string>
     <string name="onboarding_welcome_text_policies">Policies</string>
-    <string name="onboarding_welcome_text_policies_paragraph">• PureWeather is free software licensed under the <a href="https://www.gnu.org/licenses/">GNU General Public License</a>\n • Check out the <a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Privacy Policy</a></string>
+    <string name="onboarding_welcome_text_policies_paragraph">• PureWeather is free software licensed under the <a href="https://www.gnu.org/licenses/">GNU General Public License</a>\n • Check out the <a href="https://cworld0.github.io/PureWeather/PrivacyPolicy">Privacy Policy</a></string>
 
     <string name="onboarding_location_text_title">Locations</string>
     <string name="onboarding_location_button_other_location">Other Location</string>
